// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multiple checkbox with group label mounted html should match snapshot 1`] = `
<div class="b-checkbox b-flex-column">
    <div role="group" aria-labelledby="checkbox-group">
        <label id="group-checkbox-group" class="b-checkbox-group-label">
            Checkbox Group
            <!---->
        </label>
        <div class="b-flex b-flex-wrap">
            <div class="b-flex b-flex-center">
                <input type="checkbox" aria-describedby="" aria-labelledby="group-checkbox-group label-checkbox-1" disabled="disabled" id="checkbox-1" data-vv-as=" " data-vv-name="4" data-vv-scope="4" data-vv-validate-on="input|blur" data-vv-id="4" aria-required="false"
                    aria-invalid="false">
                <label id="label-checkbox-1" for="checkbox-1">
                    Checkbox
                </label>
            </div>
            <div class="b-flex b-flex-center">
                <input type="checkbox" aria-checked="true" aria-describedby="" aria-labelledby="group-checkbox-group label-checkbox-2" id="checkbox-2" data-vv-as=" " data-vv-name="4" data-vv-scope="4" data-vv-validate-on="input|blur" data-vv-id="5" aria-required="false"
                    aria-invalid="false">
                <label id="label-checkbox-2" for="checkbox-2">
                    Checkbox2
                </label>
            </div>
        </div>
    </div>
    <!---->
</div>
`;

exports[`Single checkbox mounted html should match snapshot 1`] = `
<div class="b-checkbox b-flex-column">
    <div class="b-flex b-flex-center">
        <input type="checkbox" aria-describedby="" aria-labelledby="label-checkbox" id="checkbox" data-vv-as=" " data-vv-name="1" data-vv-scope="1" data-vv-validate-on="input|blur" data-vv-id="1" aria-required="false" aria-invalid="false">
        <label id="label-checkbox" for="checkbox">
            Checkbox
            <!---->
        </label>
    </div>
    <!---->
</div>
`;

exports[`Single checked checkbox mounted html should match snapshot 1`] = `
<div class="b-checkbox b-flex-column">
    <div class="b-flex b-flex-center">
        <input type="checkbox" aria-checked="true" aria-describedby="" aria-labelledby="label-checkbox" id="checkbox" data-vv-as=" " data-vv-name="3" data-vv-scope="3" data-vv-validate-on="input|blur" data-vv-id="3" aria-required="false" aria-invalid="false">
        <label id="label-checkbox" for="checkbox">
            Checkbox
            <!---->
        </label>
    </div>
    <!---->
</div>
`;

exports[`Single disabled checkbox mounted html should match snapshot 1`] = `
<div class="b-checkbox b-flex-column">
    <div class="b-flex b-flex-center">
        <input type="checkbox" aria-describedby="" aria-labelledby="label-checkbox" disabled="disabled" id="checkbox" data-vv-as=" " data-vv-name="2" data-vv-scope="2" data-vv-validate-on="input|blur" data-vv-id="2" aria-required="false" aria-invalid="false">
        <label id="label-checkbox" for="checkbox">
            Checkbox
            <!---->
        </label>
    </div>
    <!---->
</div>
`;
